<!--
  ~ Copyright 2016 2LinesSoftware Inc
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Base App</string>

    <!-- Error Messages -->
    <string name="error_dialog_title">Error</string>
    <string name="error_invalid_userpass">Invalid email or password</string>
    <string name="error_validation_fields">Email and Password can\'t be empty</string>
    <string name="error_password_length">Passwords must be at least 6 characters</string>
    <string name="error_invalid_email">Invalid Email address</string>
    <string name="error_register_email_taken">That email is in use already or not valid</string>
    <string name="error_register_invalid_email">Not a valid email</string>
    <string name="error_communication_generic">Something went wrong..Try again</string>
    <string name="error_requires_login">You need to be logged in to access this</string>
    <string name="error_connection_failed">Unable to connect to server</string>
    <string name="error_field_required">Required</string>
    <string name="error_invalid_credentials">That email/password combination is not valid</string>

    <!-- Notification Messages -->
    <string name="notification_email_sent">Reset Email has been sent</string>

    <!-- Content Strings -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- Empty ListView -->
    <string name="empty_list_title">Empty List</string>
    <string name="empty_list_text">no more items</string>

    <!-- Login Fragment -->
    <string name="login_fragment_email">Email Address</string>
    <string name="login_fragment_title">Sign In</string>
    <string name="login_fragment_password">Password</string>
    <string name="login_fragment_button">Login</string>
    <string name="login_password_forgot">Forgot Password</string>

    <!-- Register Fragment -->
    <string name="register_fragment_title">Sign Up</string>
    <string name="register_fragment_email">Email Address</string>
    <string name="register_fragment_password">Password</string>
    <string name="register_fragment_button">Sign Up</string>

    <!-- Reset Password Fragment -->
    <string name="reset_password_title">Forgot Password</string>
    <string name="forgot_fragment_title">Forgot Password</string>
    <string name="forgot_fragment_email">Email Address</string>
    <string name="forgot_fragment_button">Resend</string>
    <string name="forgot_reset_link_sent">A link has been sent to your email</string>

    <!-- Main Login Splash Page -->
    <string name="main_login_fragment_welcome">Welcome</string>
    <string name="main_login_fragment_welcome_caption">Stuff About</string>
    <string name="main_login_fragment_create_account">Sign Up</string>
    <string name="main_login_fragment_login">Already a User? Sign In</string>

    <!-- Menu Titles -->
    <string name="menu_register">Register</string>
    <string name="menu_settings">Menu</string>
    <string name="menu_about">About</string>
    <string name="menu_main">Main</string>
    <string name="menu_logout">Logout</string>

    <!-- Generic Dialog Messages -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_error">Error</string>
    <string name="error_register_weak_password">Passwords must be at least 6 characters</string>
    <string name="error_reset_email">No account exists with that email address</string>


</resources>
