<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 2LinesSoftware Inc
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_double"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/edit_email"
                android:layout_marginLeft="@dimen/spacing_double"
                android:layout_marginRight="@dimen/spacing_double"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:drawablePadding="@dimen/spacing_normal"
                android:inputType="textEmailAddress"
                android:hint="@string/register_fragment_email"
                android:nextFocusDown="@id/edit_password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.twolinessoftware.views.PasswordEditText
                android:id="@+id/edit_password"
                android:layout_marginLeft="@dimen/spacing_double"
                android:layout_marginRight="@dimen/spacing_double"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/register_fragment_password"
                android:inputType="textPassword"
                android:imeOptions="actionGo"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_marginLeft="@dimen/spacing_double"
            android:layout_marginRight="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_fragment_button"/>


    </LinearLayout>

</LinearLayout>